Rename srx_order_id field to order_ref
